--- a/SmartWatch.ioc
+++ b/SmartWatch.ioc
@@ -1,36 +1,128 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=SPI3_TX
+Dma.Request1=SPI1_TX
+Dma.Request2=SPI1_RX
+Dma.RequestsNb=3
+Dma.SPI1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.2.Instance=DMA1_Channel2
+Dma.SPI1_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.2.MemInc=DMA_MINC_DISABLE
+Dma.SPI1_RX.2.Mode=DMA_NORMAL
+Dma.SPI1_RX.2.NoTestForDmaSupport=false
+Dma.SPI1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_RX.2.Request=DMA_REQUEST_1
+Dma.SPI1_RX.2.RequestParameters=Instance,Request,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,NoTestForDmaSupport
+Dma.SPI1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.1.Instance=DMA1_Channel3
+Dma.SPI1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.1.MemInc=DMA_MINC_DISABLE
+Dma.SPI1_TX.1.Mode=DMA_NORMAL
+Dma.SPI1_TX.1.NoTestForDmaSupport=false
+Dma.SPI1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.1.Request=DMA_REQUEST_1
+Dma.SPI1_TX.1.RequestParameters=Instance,Request,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,NoTestForDmaSupport
+Dma.SPI3_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI3_TX.0.Instance=DMA2_Channel2
+Dma.SPI3_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI3_TX.0.MemInc=DMA_MINC_DISABLE
+Dma.SPI3_TX.0.Mode=DMA_NORMAL
+Dma.SPI3_TX.0.NoTestForDmaSupport=false
+Dma.SPI3_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI3_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI3_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI3_TX.0.Request=DMA_REQUEST_3
+Dma.SPI3_TX.0.RequestParameters=Instance,Request,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,NoTestForDmaSupport
 File.Version=5
 KeepUserPlacement=true
 Mcu.Family=STM32L4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=RTC
-Mcu.IP3=USB_OTG_FS
-Mcu.IPNb=4
+Mcu.IP0=DMA
+Mcu.IP1=I2C2
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=RTC
+Mcu.IP5=SPI1
+Mcu.IP6=SPI3
+Mcu.IP7=USB_OTG_FS
+Mcu.IPNb=8
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14/OSC32_IN
 Mcu.Pin1=PC15/OSC32_OUT
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PC10
+Mcu.Pin13=PC12
+Mcu.Pin14=PB8
+Mcu.Pin15=PB9
+Mcu.Pin16=VP_RTC_VS_RTC_Alarm_A_Intern
 Mcu.Pin2=PH0/OSC_IN
 Mcu.Pin3=PH1/OSC_OUT
-Mcu.Pin4=PA11
-Mcu.Pin5=PA12
-Mcu.Pin6=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.PinsNb=7
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PC4
+Mcu.Pin8=PB13
+Mcu.Pin9=PB14
+Mcu.PinsNb=17
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
 MxCube.Version=4.10.0
 MxDb.Version=DB.4.0.100
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false
+NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false
+NVIC.DMA2_Channel2_IRQn=true\:0\:0\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SysTick_IRQn=true\:0\:0\:false
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=BT_SCK
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=BT_MISO
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=BT_MOSI
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
+PB13.Locked=true
+PB13.Mode=I2C
+PB13.Signal=I2C2_SCL
+PB14.Locked=true
+PB14.Mode=I2C
+PB14.Signal=I2C2_SDA
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=OLED_RES
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=OLED_DC
+PB9.Locked=true
+PB9.Signal=GPIO_Output
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=OLED_SCK
+PC10.Mode=TX_Only_Simplex_Unidirect_Master
+PC10.Signal=SPI3_SCK
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=OLED_MOSI
+PC12.Mode=TX_Only_Simplex_Unidirect_Master
+PC12.Signal=SPI3_MOSI
 PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=BT_INT
+PC4.Locked=true
+PC4.Signal=GPIO_Input
 PCC.Checker=false
 PCC.Line=STM32L4x6
 PCC.MCU=STM32L476R(C-E-G)Tx
@@ -44,7 +136,7 @@ PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
-RCC.ADCFreq_Value=32000000
+RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
 RCC.APB1TimFreq_Value=80000000
@@ -60,7 +152,7 @@ RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=80000000
 RCC.I2C2Freq_Value=80000000
 RCC.I2C3Freq_Value=80000000
-RCC.IPParameters=FamilyName,MSI_VALUE,HSI_VALUE,VCOInputFreq_Value,VCOOutputFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,VCOSAI1OutputFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,VCOSAI2OutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,SAI1Freq_Value,HSE_VALUE,LSI_VALUE,LSCOPinFreq_Value,SAI2Freq_Value,PLLSourceVirtual,USBFreq_Value,SDMMCFreq_Value,RNGFreq_Value,ADCFreq_Value,SYSCLKSource,HCLKFreq_Value,AHBFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,APB1Freq_Value,APB1TimFreq_Value,I2C2Freq_Value,UART4Freq_Value,USART3Freq_Value,LPUART1Freq_Value,LPTIM1Freq_Value,UART5Freq_Value,I2C1Freq_Value,LPTIM2Freq_Value,I2C3Freq_Value,USART2Freq_Value,DFSDMFreq_Value,SWPMI1Freq_Value,APB2Freq_Value,APB2TimFreq_Value,USART1Freq_Value,PWRFreq_Value,MCO1PinFreq_Value,SYSCLKFreq_VALUE,PLLN,RTCClockSelection,RTCFreq_Value,LCDFreq_Value
+RCC.IPParameters=FamilyName,MSI_VALUE,HSI_VALUE,VCOInputFreq_Value,VCOOutputFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,VCOSAI1OutputFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,VCOSAI2OutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,SAI1Freq_Value,HSE_VALUE,LSI_VALUE,LSCOPinFreq_Value,SAI2Freq_Value,PLLSourceVirtual,USBFreq_Value,SDMMCFreq_Value,RNGFreq_Value,ADCFreq_Value,SYSCLKSource,HCLKFreq_Value,AHBFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,APB1Freq_Value,APB1TimFreq_Value,I2C2Freq_Value,UART4Freq_Value,USART3Freq_Value,LPUART1Freq_Value,LPTIM1Freq_Value,UART5Freq_Value,I2C1Freq_Value,LPTIM2Freq_Value,I2C3Freq_Value,USART2Freq_Value,DFSDMFreq_Value,SWPMI1Freq_Value,APB2Freq_Value,APB2TimFreq_Value,USART1Freq_Value,PWRFreq_Value,MCO1PinFreq_Value,SYSCLKFreq_VALUE,PLLN,RTCClockSelection,RTCFreq_Value,LCDFreq_Value,PLLSAI1N
 RCC.LCDFreq_Value=32768
 RCC.LPTIM1Freq_Value=80000000
 RCC.LPTIM2Freq_Value=80000000
@@ -73,19 +165,20 @@ RCC.PLLN=20
 RCC.PLLPoutputFreq_Value=22857142.85714286
 RCC.PLLQoutputFreq_Value=80000000
 RCC.PLLRCLKFreq_Value=80000000
-RCC.PLLSAI1PoutputFreq_Value=9142857.142857144
-RCC.PLLSAI1QoutputFreq_Value=32000000
-RCC.PLLSAI1RoutputFreq_Value=32000000
+RCC.PLLSAI1N=12
+RCC.PLLSAI1PoutputFreq_Value=13714285.714285715
+RCC.PLLSAI1QoutputFreq_Value=48000000
+RCC.PLLSAI1RoutputFreq_Value=48000000
 RCC.PLLSAI2PoutputFreq_Value=9142857.142857144
 RCC.PLLSAI2RoutputFreq_Value=32000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWRFreq_Value=80000000
-RCC.RNGFreq_Value=32000000
+RCC.RNGFreq_Value=48000000
 RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
-RCC.SAI1Freq_Value=9142857.142857144
-RCC.SAI2Freq_Value=9142857.142857144
-RCC.SDMMCFreq_Value=32000000
+RCC.SAI1Freq_Value=13714285.714285715
+RCC.SAI2Freq_Value=13714285.714285715
+RCC.SDMMCFreq_Value=48000000
 RCC.SWPMI1Freq_Value=80000000
 RCC.SYSCLKFreq_VALUE=80000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
@@ -94,11 +187,19 @@ RCC.UART5Freq_Value=80000000
 RCC.USART1Freq_Value=80000000
 RCC.USART2Freq_Value=80000000
 RCC.USART3Freq_Value=80000000
-RCC.USBFreq_Value=32000000
+RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=160000000
-RCC.VCOSAI1OutputFreq_Value=64000000
+RCC.VCOSAI1OutputFreq_Value=96000000
 RCC.VCOSAI2OutputFreq_Value=64000000
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.CalculateBaudRate=10.0 MBits/s
+SPI1.IPParameters=Mode,BaudRatePrescaler,CalculateBaudRate
+SPI1.Mode=SPI_MODE_MASTER
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI3.CalculateBaudRate=10.0 MBits/s
+SPI3.IPParameters=Mode,BaudRatePrescaler,CalculateBaudRate
+SPI3.Mode=SPI_MODE_MASTER
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
