adding stm32cubemx updated fike

--- a/SmartWatch.ioc
+++ b/SmartWatch.ioc
@@ -52,22 +52,30 @@ Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14/OSC32_IN
 Mcu.Pin1=PC15/OSC32_OUT
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PC10
-Mcu.Pin13=PC12
-Mcu.Pin14=PB8
-Mcu.Pin15=PB9
-Mcu.Pin16=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin10=PB2
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin13=PC8
+Mcu.Pin14=PC9
+Mcu.Pin15=PA8
+Mcu.Pin16=PA10
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
 Mcu.Pin2=PH0/OSC_IN
+Mcu.Pin20=PC10
+Mcu.Pin21=PC12
+Mcu.Pin22=PB8
+Mcu.Pin23=PB9
+Mcu.Pin24=VP_RTC_VS_RTC_Alarm_A_Intern
 Mcu.Pin3=PH1/OSC_OUT
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
 Mcu.Pin6=PA7
 Mcu.Pin7=PC4
-Mcu.Pin8=PB13
-Mcu.Pin9=PB14
-Mcu.PinsNb=17
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=25
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
 MxCube.Version=4.10.0
@@ -77,10 +85,18 @@ NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false
 NVIC.DMA2_Channel2_IRQn=true\:0\:0\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SysTick_IRQn=true\:0\:0\:false
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=BTN_BACK
+PA10.Locked=true
+PA10.Signal=GPIO_Input
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
+PA13.GPIOParameters=GPIO_Label
+PA13.GPIO_Label=STAT
+PA13.Locked=true
+PA13.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=BT_SCK
 PA5.Mode=Full_Duplex_Master
@@ -93,12 +109,22 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=BT_MOSI
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=IMU_NRESET
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PB0.Locked=true
+PB0.Signal=GPIO_Input
+PB1.Locked=true
+PB1.Signal=GPIO_Input
 PB13.Locked=true
 PB13.Mode=I2C
 PB13.Signal=I2C2_SCL
 PB14.Locked=true
 PB14.Mode=I2C
 PB14.Signal=I2C2_SDA
+PB2.Locked=true
+PB2.Signal=GPIO_Input
 PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=OLED_RES
 PB8.Locked=true
@@ -123,6 +149,14 @@ PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=BT_INT
 PC4.Locked=true
 PC4.Signal=GPIO_Input
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=G_INT
+PC8.Locked=true
+PC8.Signal=GPIO_Input
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=IMU_INT
+PC9.Locked=true
+PC9.Signal=GPIO_Input
 PCC.Checker=false
 PCC.Line=STM32L4x6
 PCC.MCU=STM32L476R(C-E-G)Tx
