--- a/SmartWatch.ioc
+++ b/SmartWatch.ioc
@@ -46,8 +46,9 @@ Mcu.IP3=RCC
 Mcu.IP4=RTC
 Mcu.IP5=SPI1
 Mcu.IP6=SPI3
-Mcu.IP7=USB_OTG_FS
-Mcu.IPNb=8
+Mcu.IP7=SYS
+Mcu.IP8=USB_OTG_FS
+Mcu.IPNb=9
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14/OSC32_IN
@@ -58,16 +59,18 @@ Mcu.Pin12=PB14
 Mcu.Pin13=PC8
 Mcu.Pin14=PC9
 Mcu.Pin15=PA8
-Mcu.Pin16=PA10
-Mcu.Pin17=PA11
-Mcu.Pin18=PA12
-Mcu.Pin19=PA13
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA11
+Mcu.Pin19=PA12
 Mcu.Pin2=PH0/OSC_IN
-Mcu.Pin20=PC10
-Mcu.Pin21=PC12
-Mcu.Pin22=PB8
-Mcu.Pin23=PB9
-Mcu.Pin24=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin20=PA13
+Mcu.Pin21=PA14
+Mcu.Pin22=PC10
+Mcu.Pin23=PC12
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_RTC_VS_RTC_Alarm_A_Intern
 Mcu.Pin3=PH1/OSC_OUT
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
@@ -75,7 +78,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PC4
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=25
+Mcu.PinsNb=27
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
 MxCube.Version=4.10.0
@@ -93,10 +96,10 @@ PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
-PA13.GPIOParameters=GPIO_Label
-PA13.GPIO_Label=STAT
-PA13.Locked=true
-PA13.Signal=GPIO_Input
+PA13.Mode=Serial-Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial-Wire
+PA14.Signal=SYS_JTCK-SWCLK
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=BT_SCK
 PA5.Mode=Full_Duplex_Master
@@ -113,6 +116,10 @@ PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=IMU_NRESET
 PA8.Locked=true
 PA8.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=stat
+PA9.Locked=true
+PA9.Signal=GPIO_Input
 PB0.Locked=true
 PB0.Signal=GPIO_Input
 PB1.Locked=true
