--- a/SmartWatch.ioc
+++ b/SmartWatch.ioc
@@ -68,9 +68,12 @@ Mcu.Pin20=PA13
 Mcu.Pin21=PA14
 Mcu.Pin22=PC10
 Mcu.Pin23=PC12
-Mcu.Pin24=PB8
-Mcu.Pin25=PB9
-Mcu.Pin26=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin24=PB3
+Mcu.Pin25=PB4
+Mcu.Pin26=PB5
+Mcu.Pin27=PB8
+Mcu.Pin28=PB9
+Mcu.Pin29=VP_RTC_VS_RTC_Alarm_A_Intern
 Mcu.Pin3=PH1/OSC_OUT
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
@@ -78,7 +81,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PC4
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=27
+Mcu.PinsNb=30
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
 MxCube.Version=4.10.0
@@ -120,8 +123,12 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=stat
 PA9.Locked=true
 PA9.Signal=GPIO_Input
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=btn_dn
 PB0.Locked=true
 PB0.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=btn_sel
 PB1.Locked=true
 PB1.Signal=GPIO_Input
 PB13.Locked=true
@@ -130,8 +137,21 @@ PB13.Signal=I2C2_SCL
 PB14.Locked=true
 PB14.Mode=I2C
 PB14.Signal=I2C2_SDA
-PB2.Locked=true
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=btn_up
 PB2.Signal=GPIO_Input
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=Red
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=yellow
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=green
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=OLED_RES
 PB8.Locked=true
