updated PCB to 1.1 and added battery monitoring chip

--- a/SmartWatch.ioc
+++ b/SmartWatch.ioc
@@ -66,22 +66,23 @@ Mcu.Pin19=PA12
 Mcu.Pin2=PH0/OSC_IN
 Mcu.Pin20=PA13
 Mcu.Pin21=PA14
-Mcu.Pin22=PC10
-Mcu.Pin23=PC12
-Mcu.Pin24=PB3
-Mcu.Pin25=PB4
-Mcu.Pin26=PB5
-Mcu.Pin27=PB8
-Mcu.Pin28=PB9
-Mcu.Pin29=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin22=PA15
+Mcu.Pin23=PC10
+Mcu.Pin24=PC12
+Mcu.Pin25=PB3
+Mcu.Pin26=PB4
+Mcu.Pin27=PB5
+Mcu.Pin28=PB8
+Mcu.Pin29=PB9
 Mcu.Pin3=PH1/OSC_OUT
+Mcu.Pin30=VP_RTC_VS_RTC_Alarm_A_Intern
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
 Mcu.Pin6=PA7
 Mcu.Pin7=PC4
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=30
+Mcu.PinsNb=31
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
 MxCube.Version=4.10.0
@@ -103,6 +104,10 @@ PA13.Mode=Serial-Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial-Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=\!ALRT
+PA15.Locked=true
+PA15.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=BT_SCK
 PA5.Mode=Full_Duplex_Master
