--- a/SmartWatch.ioc
+++ b/SmartWatch.ioc
@@ -52,37 +52,34 @@ Mcu.IPNb=9
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14/OSC32_IN
-Mcu.Pin1=PC15/OSC32_OUT
-Mcu.Pin10=PB2
-Mcu.Pin11=PB13
-Mcu.Pin12=PB14
-Mcu.Pin13=PC8
-Mcu.Pin14=PC9
-Mcu.Pin15=PA8
-Mcu.Pin16=PA9
-Mcu.Pin17=PA10
-Mcu.Pin18=PA11
-Mcu.Pin19=PA12
-Mcu.Pin2=PH0/OSC_IN
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PA15
-Mcu.Pin23=PC10
-Mcu.Pin24=PC12
-Mcu.Pin25=PB3
-Mcu.Pin26=PB4
-Mcu.Pin27=PB5
-Mcu.Pin28=PB8
-Mcu.Pin29=PB9
-Mcu.Pin3=PH1/OSC_OUT
-Mcu.Pin30=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PC4
-Mcu.Pin8=PB0
-Mcu.Pin9=PB1
-Mcu.PinsNb=31
+Mcu.Pin1=PH0/OSC_IN
+Mcu.Pin10=PB14
+Mcu.Pin11=PC8
+Mcu.Pin12=PC9
+Mcu.Pin13=PA8
+Mcu.Pin14=PA10
+Mcu.Pin15=PA11
+Mcu.Pin16=PA12
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PA15
+Mcu.Pin2=PA5
+Mcu.Pin20=PC10
+Mcu.Pin21=PC12
+Mcu.Pin22=PB3
+Mcu.Pin23=PB4
+Mcu.Pin24=PB5
+Mcu.Pin25=PB8
+Mcu.Pin26=PB9
+Mcu.Pin27=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin3=PA6
+Mcu.Pin4=PA7
+Mcu.Pin5=PC4
+Mcu.Pin6=PB0
+Mcu.Pin7=PB1
+Mcu.Pin8=PB2
+Mcu.Pin9=PB13
+Mcu.PinsNb=28
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
 MxCube.Version=4.10.0
@@ -94,19 +91,25 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SysTick_IRQn=true\:0\:0\:false
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=BTN_BACK
-PA10.Locked=true
 PA10.Signal=GPIO_Input
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=USB_D-
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=USB_D+
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
+PA13.GPIOParameters=GPIO_Label
+PA13.GPIO_Label=SWDIO
 PA13.Mode=Serial-Wire
 PA13.Signal=SYS_JTMS-SWDIO
+PA14.GPIOParameters=GPIO_Label
+PA14.GPIO_Label=SWCLK
 PA14.Mode=Serial-Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=\!ALRT
-PA15.Locked=true
 PA15.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=BT_SCK
@@ -122,48 +125,38 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=IMU_NRESET
-PA8.Locked=true
 PA8.Signal=GPIO_Output
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=stat
-PA9.Locked=true
-PA9.Signal=GPIO_Input
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=btn_dn
-PB0.Locked=true
+PB0.GPIO_Label=BTN_DN
 PB0.Signal=GPIO_Input
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=btn_sel
-PB1.Locked=true
+PB1.GPIO_Label=BTN_SEL
 PB1.Signal=GPIO_Input
-PB13.Locked=true
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=SCL
 PB13.Mode=I2C
 PB13.Signal=I2C2_SCL
-PB14.Locked=true
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=SDA
 PB14.Mode=I2C
 PB14.Signal=I2C2_SDA
 PB2.GPIOParameters=GPIO_Label
-PB2.GPIO_Label=btn_up
+PB2.GPIO_Label=BTN_UP
 PB2.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=Red
-PB3.Locked=true
+PB3.GPIO_Label=RED
 PB3.Signal=GPIO_Output
 PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=yellow
-PB4.Locked=true
+PB4.GPIO_Label=YELLOW
 PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=green
-PB5.Locked=true
+PB5.GPIO_Label=GREEN
 PB5.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Label
 PB8.GPIO_Label=OLED_RES
-PB8.Locked=true
 PB8.Signal=GPIO_Output
 PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=OLED_DC
-PB9.Locked=true
 PB9.Signal=GPIO_Output
 PC10.GPIOParameters=GPIO_Label
 PC10.GPIO_Label=OLED_SCK
@@ -173,21 +166,18 @@ PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=OLED_MOSI
 PC12.Mode=TX_Only_Simplex_Unidirect_Master
 PC12.Signal=SPI3_MOSI
-PC14/OSC32_IN.Mode=LSE-External-Oscillator
+PC14/OSC32_IN.GPIOParameters=GPIO_Label
+PC14/OSC32_IN.GPIO_Label=OSC32_IN
+PC14/OSC32_IN.Mode=LSE-External-Clock-Source
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
-PC15/OSC32_OUT.Mode=LSE-External-Oscillator
-PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=BT_INT
-PC4.Locked=true
 PC4.Signal=GPIO_Input
 PC8.GPIOParameters=GPIO_Label
 PC8.GPIO_Label=G_INT
-PC8.Locked=true
 PC8.Signal=GPIO_Input
 PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=IMU_INT
-PC9.Locked=true
 PC9.Signal=GPIO_Input
 PCC.Checker=false
 PCC.Line=STM32L4x6
@@ -198,10 +188,10 @@ PCC.Seq0=0
 PCC.Series=STM32L4
 PCC.Temperature=25
 PCC.Vdd=3.0
-PH0/OSC_IN.Mode=HSE-External-Oscillator
+PH0/OSC_IN.GPIOParameters=GPIO_Label
+PH0/OSC_IN.GPIO_Label=OSC_IN
+PH0/OSC_IN.Mode=HSE-External-Clock-Source
 PH0/OSC_IN.Signal=RCC_OSC_IN
-PH1/OSC_OUT.Mode=HSE-External-Oscillator
-PH1/OSC_OUT.Signal=RCC_OSC_OUT
 RCC.ADCFreq_Value=48000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
