--- a/Software/SmartWatch/SmartWatch.ioc
+++ b/Software/SmartWatch/SmartWatch.ioc
@@ -52,34 +52,36 @@ Mcu.IPNb=9
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14/OSC32_IN
-Mcu.Pin1=PH0/OSC_IN
-Mcu.Pin10=PB14
-Mcu.Pin11=PC8
-Mcu.Pin12=PC9
-Mcu.Pin13=PA8
-Mcu.Pin14=PA10
-Mcu.Pin15=PA11
-Mcu.Pin16=PA12
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PA15
-Mcu.Pin2=PA5
-Mcu.Pin20=PC10
-Mcu.Pin21=PC12
-Mcu.Pin22=PB3
-Mcu.Pin23=PB4
-Mcu.Pin24=PB5
-Mcu.Pin25=PB8
-Mcu.Pin26=PB9
-Mcu.Pin27=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin3=PA6
-Mcu.Pin4=PA7
-Mcu.Pin5=PC4
-Mcu.Pin6=PB0
-Mcu.Pin7=PB1
-Mcu.Pin8=PB2
-Mcu.Pin9=PB13
-Mcu.PinsNb=28
+Mcu.Pin1=PC15/OSC32_OUT
+Mcu.Pin10=PB2
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin13=PC8
+Mcu.Pin14=PC9
+Mcu.Pin15=PA8
+Mcu.Pin16=PA10
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
+Mcu.Pin2=PH0/OSC_IN
+Mcu.Pin20=PA14
+Mcu.Pin21=PA15
+Mcu.Pin22=PC10
+Mcu.Pin23=PC12
+Mcu.Pin24=PB3
+Mcu.Pin25=PB4
+Mcu.Pin26=PB5
+Mcu.Pin27=PB8
+Mcu.Pin28=PB9
+Mcu.Pin29=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin3=PH1/OSC_OUT
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PC4
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=30
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
 MxCube.Version=4.11.0
@@ -168,8 +170,10 @@ PC12.Mode=TX_Only_Simplex_Unidirect_Master
 PC12.Signal=SPI3_MOSI
 PC14/OSC32_IN.GPIOParameters=GPIO_Label
 PC14/OSC32_IN.GPIO_Label=OSC32_IN
-PC14/OSC32_IN.Mode=LSE-External-Clock-Source
+PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
+PC15/OSC32_OUT.Mode=LSE-External-Oscillator
+PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=BT_INT
 PC4.Signal=GPIO_Input
@@ -190,8 +194,10 @@ PCC.Temperature=25
 PCC.Vdd=3.0
 PH0/OSC_IN.GPIOParameters=GPIO_Label
 PH0/OSC_IN.GPIO_Label=OSC_IN
-PH0/OSC_IN.Mode=HSE-External-Clock-Source
+PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
+PH1/OSC_OUT.Mode=HSE-External-Oscillator
+PH1/OSC_OUT.Signal=RCC_OSC_OUT
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
@@ -226,13 +232,12 @@ RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=80000000
 RCC.I2C2Freq_Value=80000000
 RCC.I2C3Freq_Value=80000000
-RCC.IPParameters=FamilyName,MSI_VALUE,HSI_VALUE,VCOInputFreq_Value,VCOOutputFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,VCOSAI1OutputFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,VCOSAI2OutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,SAI1Freq_Value,HSE_VALUE,LSI_VALUE,LSCOPinFreq_Value,SAI2Freq_Value,PLLSourceVirtual,USBFreq_Value,SDMMCFreq_Value,RNGFreq_Value,ADCFreq_Value,SYSCLKSource,HCLKFreq_Value,AHBFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,APB1Freq_Value,APB1TimFreq_Value,I2C2Freq_Value,UART4Freq_Value,USART3Freq_Value,LPUART1Freq_Value,LPTIM1Freq_Value,UART5Freq_Value,I2C1Freq_Value,LPTIM2Freq_Value,I2C3Freq_Value,USART2Freq_Value,DFSDMFreq_Value,SWPMI1Freq_Value,APB2Freq_Value,APB2TimFreq_Value,USART1Freq_Value,PWRFreq_Value,MCO1PinFreq_Value,SYSCLKFreq_VALUE,PLLN,RTCClockSelection,RTCFreq_Value,LCDFreq_Value,PLLSAI1N,PREFETCH_ENABLE,LSE_VALUE
+RCC.IPParameters=FamilyName,MSI_VALUE,HSI_VALUE,VCOInputFreq_Value,VCOOutputFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,VCOSAI1OutputFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,VCOSAI2OutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,SAI1Freq_Value,HSE_VALUE,LSI_VALUE,LSCOPinFreq_Value,SAI2Freq_Value,PLLSourceVirtual,USBFreq_Value,SDMMCFreq_Value,RNGFreq_Value,ADCFreq_Value,SYSCLKSource,HCLKFreq_Value,AHBFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,APB1Freq_Value,APB1TimFreq_Value,I2C2Freq_Value,UART4Freq_Value,USART3Freq_Value,LPUART1Freq_Value,LPTIM1Freq_Value,UART5Freq_Value,I2C1Freq_Value,LPTIM2Freq_Value,I2C3Freq_Value,USART2Freq_Value,DFSDMFreq_Value,SWPMI1Freq_Value,APB2Freq_Value,APB2TimFreq_Value,USART1Freq_Value,PWRFreq_Value,MCO1PinFreq_Value,SYSCLKFreq_VALUE,PLLN,RTCClockSelection,RTCFreq_Value,LCDFreq_Value,PLLSAI1N,PREFETCH_ENABLE
 RCC.LCDFreq_Value=32768
 RCC.LPTIM1Freq_Value=80000000
 RCC.LPTIM2Freq_Value=80000000
 RCC.LPUART1Freq_Value=80000000
 RCC.LSCOPinFreq_Value=32000
-RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=80000000
 RCC.MSI_VALUE=4000000
